Fix side images not showing on safari

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,8 @@ body {
 }
 
 .carousel-wrapper img {
-  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
   object-fit: contain;
   opacity: 0.5;
   transition: opacity 0.5s ease-out;
@@ -102,7 +103,7 @@ body {
 /* CUSTOMIZABLE VALUES */
 :root {
   --carousel-bg: white;
-  --gap: 0;
+  --gap: 1rem;
   --nav-color: white;
   --arrow-color: black;
   --arrow-size: 24px;
